  character sets will now consistently use a Content-Transfer-Encoding of
  7bit rather than sometimes being marked as 8bit.

- Issue #8330: Fix expected output in test_gdb.

- Issue #8374: Update the internal alias table in the :mod:`locale` module
  to cover recent locale changes and additions.

Extension Modules
-----------------

- Build the ossaudio extension on GNU/kFreeBSD.

Tests
-----

- Issue #8108: test_ftplib's non-blocking SSL server now has proper handling
  of SSL shutdowns.

Build
-----

- Issue #8509: Fix quoting in help strings and code snippets in configure.in.


What's New in Python 2.7 beta 1?
================================

*Release date: 2010-04-10*

Core and Builtins
-----------------

- Issue #7301: Add environment variable $PYTHONWARNINGS.

- Issue #8329: Don't return the same lists from select.select when no fds are
  changed.

- Issue #8259: 1L << (2**31) no longer produces an 'outrageous shift error'
  on 64-bit machines.  The shift count for either left or right shift is
  permitted to be up to sys.maxsize.

- Ensure that tokenization of identifiers is not affected by locale.

- Issue #1222585: Added LDCXXSHARED for C++ support. Patch by Arfrever.

- Raise a TypeError when trying to delete a T_STRING_INPLACE struct member.

- Issue #7994: Issue a PendingDeprecationWarning if object.__format__
  is called with a non-empty format string. This is an effort to
  future-proof user code. If a derived class does not currently
  implement __format__ but later adds its own __format__, it would
  most likely break user code that had supplied a format string. This
  will be changed to a DeprecationWaring in Python 3.3 and it will be
  an error in Python 3.4.

- Issue #8268: Old-style classes (not just instances) now support weak
  references.

- Issue #8211: Save/restore CFLAGS around AC_PROG_CC in configure.in, compiler
  optimizations are disabled when --with-pydebug is used.
